Fixed ShowFrame gridview not updating after delete operation